Uppdaterat formuläret och skapat funktionalitet för registrering. Uppdaterat README.

--- a/src/registration.html
+++ b/src/registration.html
@@ -33,20 +33,21 @@
         </p>
 
         <div class="form-container">
-            <form id="login" method="post" action="index.html">
+            <form id="register" method="post" action="index.html">
                 <br>
                 <label for="username">Välj användarnamn:</label>
                 <br>
-                <input type="text" id="username" name="username" required>
+                <input type="text" id="username" name="username">
                 <br>
                 <br>
                 <label for="password">Välj lösenord:</label>
                 <br>
-                <input type="password" id="password" name="password" required>
+                <input type="password" id="password" name="password">
                 <br>
                 <br>
                 <button type="submit">Registrera</button>
             </form>
+            <p class="error-container"></p>
         </div>
     </main>
 </body>
