Kommenterat css-filen, lagt till validering/kontroll av input med funktionen checkInput innan funktionen regUser körs samt uppdaterat README.

--- a/src/registration.html
+++ b/src/registration.html
@@ -28,7 +28,6 @@
 
         <p>
             Gillar du också trevliga bilder? Då är detta sidan för dig!
-            <br>
             Registrera dig nu och få tillgång till en ny bild varje dag.
         </p>
 
@@ -44,10 +43,9 @@
                 <br>
                 <input type="password" id="password" name="password">
                 <br>
-                <br>
+                <p id="error-container"></p>
                 <button type="submit">Registrera</button>
             </form>
-            <p class="error-container"></p>
         </div>
     </main>
 </body>
