La till en checkbox för möjlighet att visa/dölja lösenord.

--- a/src/registration.html
+++ b/src/registration.html
@@ -43,6 +43,9 @@
                 <br>
                 <input type="password" id="password" name="password">
                 <br>
+                <input type="checkbox" id="show-password"> Visa lösenord
+                <br>
+                <br>
                 <p id="error-container"></p>
                 <button type="submit">Registrera</button>
             </form>
