Lagt till checkbox för synligt/dolt lösenord samt error-container på startsidan, skapat funktionalitet för att logga in en användare.  Uppdaterat kontroll för vilket formulär som finns på sidan samt checkInput som utgår ifrån vilket formulär det är.

--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,10 @@
                 <br>
                 <input type="password" id="password" name="password" required>
                 <br>
+                <input type="checkbox" id="show-password"> Visa lösenord
                 <br>
+                <br>
+                <p id="error-container"></p>
                 <button type="submit">Logga in</button>
             </form>
         </div>
