Lagt till funktionalitet vid inloggning och åtkomst till skyddad sida med funktionerna isLoggedIn och checkAuthentication. Uppdaterat README.

--- a/src/index.html
+++ b/src/index.html
@@ -37,12 +37,12 @@
                 <br>
                 <label for="username">Användarnamn:</label>
                 <br>
-                <input type="text" id="username" name="username" required>
+                <input type="text" id="username" name="username">
                 <br>
                 <br>
                 <label for="password">Lösenord:</label>
                 <br>
-                <input type="password" id="password" name="password" required>
+                <input type="password" id="password" name="password">
                 <br>
                 <input type="checkbox" id="show-password"> Visa lösenord
                 <br>
