--- a/src/mypage.html
+++ b/src/mypage.html
@@ -22,7 +22,7 @@
         </nav>
     </header>
 
-    <main>
+    <main id="content" style="display: none;">
         <h1>Min sida</h1>
 
         <p>
@@ -34,7 +34,7 @@
         </div>
 
         <div class="logout">
-            <button type="button">Logga ut</button>
+            <button id="logout-button" type="button">Logga ut</button>
         </div>
     </main>
 </body>
