Lagt till en ny favicon, komprimerat bilden på den skyddade sidan samt gjort sista kommentarerna.

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dagens bild | Startsida</title>
+    <title>Dagens kattbild | Startsida</title>
 
     <link rel="icon" href="/src/assets/favicon.ico">
     <link rel="stylesheet" href="/src/css/main.css">
@@ -24,10 +24,10 @@
     </header>
 
     <main>
-        <h1>Välkommen till <i>Dagens bild!</i></h1>
+        <h1>Välkommen till <i>Dagens kattbild!</i></h1>
 
         <p>
-            Detta är sidan för dig som gillar trevliga bilder. Logga in nedan för att se dagens bild. 
+            Detta är sidan för dig som gillar trevliga kattbilder. Logga in nedan för att se dagens kattbild.
             <br>
             Om du inte har ett konto, registrera dig <a href="registration.html">här</a>!
         </p>
