--- a/src/mypage.html
+++ b/src/mypage.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dagens bild | Min sida</title>
+    <title>Dagens kattbild | Min sida</title>
 
     <link rel="icon" href="/src/assets/favicon.ico">
     <link rel="stylesheet" href="/src/css/main.css">
@@ -26,12 +26,14 @@
         <h1>Min sida</h1>
 
         <p>
-            Här nedan ser du dagens bild.
+            Här nedan ser du dagens kattbild.
         </p>
 
         <div class="img-container">
-            <img src="assets/cat.jpg" alt="En söt katt">
+            <img src="assets/cat.jpg" alt="En grå katt">
         </div>
+
+        <p id="img-p">Bilden är hämtad från Pixabay.</p>
 
         <div class="logout">
             <button id="logout-button" type="button">Logga ut</button>
