--- a/src/registration.html
+++ b/src/registration.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dagens bild | Registrering</title>
+    <title>Dagens kattbild | Registrering</title>
 
     <link rel="icon" href="/src/assets/favicon.ico">
     <link rel="stylesheet" href="/src/css/main.css">
@@ -27,8 +27,8 @@
         <h1>Registrering</h1>
 
         <p>
-            Gillar du också trevliga bilder? Då är detta sidan för dig!
-            Registrera dig nu och få tillgång till en ny bild varje dag.
+            Gillar du också trevliga kattbilder? Då är detta sidan för dig!
+            Registrera dig nu och få tillgång till en ny kattbild varje dag.
         </p>
 
         <div class="form-container">
